
debian-installer (2005xxxx) unstable; urgency=UNRELEASED

  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.
    - Use the correct TFTP filename for ARM Netwinder.
    - Remove bogus information about noinitrd option from ARM manual.
    - Mention option needed for serial console installations on
      ARM Netwinder, thanks thanks Kyle McMartin.

 -- Martin Michlmayr <tbm@cyrius.com>  Tue, 15 Mar 2005 05:46:46 +0000

debian-installer (20050305) unstable; urgency=high

  * Thiemo Seufer
    - Do an e2fsck for the extra floppy images.
    - Handle sparse files in cramfs images more efficiently.
    - Use cramfs images for mips/r4k-ip22 and mips/r5k-ip22.
    - Add cramfsprogs build-dep for mips.
  * Colin Watson
    - Add acpi-modules to the amd64 cdrom, hd-media, monolithic, and netboot
      initrds, so that rootskel can turn the fan on.
    - Use dependency resolution for ide-modules, nic-modules,
      pcmcia-storage-modules, scsi-common-modules, scsi-modules, and
      usb-storage-modules on powerpc, and remove several modules from
      powerpc-extra-modules that only belong on certain images. This removes
      cdrom-core-modules and fs-common-modules from netboot images, and adds
      parport-modules to apus/cdrom (I think it was missing by mistake).
    - Add support for kernel-specific pkg-lists entries: use lines like
      "package [2.2 2.4]" or "package * [2.6]". Should eventually form a
      simpler replacement for the kernel_specific directory.
    - Include initrd.list on amd64/i386 images.
    - Add hd-media image for powerpc, including a boot.img.gz designed for
      use on USB sticks.
    - Document USB booting on powerpc. This involved splitting out the
      documentation for USB booting on i386 a bit.
    - Since power3 and power4 no longer build images with the 2.4 kernel,
      remove their KERNELVERSION_2.4 variables and kernel-build-2.4*
      build-dependencies.