@@ -7,8 +7,8 @@ if [ -z "$languages" ]; then
 	# Please add languages only if they build properly.
 	# languages="en cs es fr ja nl pt_BR" # ca da de el eu it ru
 
-	# Buildlist of languages to be included on RC2 CD's
-	languages="en cs es fr ja pt_BR"
+	# Buildlist of languages to be included on RC3 CD's
+	languages="en cs de es fr ja pt_BR ru"
 fi
 
 if [ -z "$architectures" ]; then
@@ -21,7 +21,7 @@ fi
 
 if [ -z "$formats" ]; then
         #formats="html pdf ps txt"
-        formats="html"
+        formats="html pdf txt"
 fi
 
 [ -e "$destination" ] || mkdir -p "$destination"
