@@ -31,8 +31,11 @@ debian-installer (2005xxxx) unstable; urgency=UNRELEASED
     - Remove bogus information about noinitrd option from ARM manual.
     - Mention option needed for serial console installations on
       ARM Netwinder, thanks thanks Kyle McMartin.
+  * Frans Pop
+    - Add German and Russian for official builds of the manual
+    - Add PDF and TXT formats for official builds of the manual
 
- -- Martin Michlmayr <tbm@cyrius.com>  Tue, 15 Mar 2005 05:46:46 +0000
+ -- Frans Pop <aragorn@tiscali.nl>  Tue, 15 Mar 2005 23:39:32 +0100
 
 debian-installer (20050305) unstable; urgency=high
 
